<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fruit picking!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
	<string name="title_activity_settings">Settings</string>
	<string name="fruitsNumber">Simultaneous fruit number</string>
	<string name="numberOfFruts">Simultaneous fruit\'s number</string>
	<string name="FruitSpeed">Fruit\'s fall speed</string>
	<string name="fruitSize">Fruit\'s size</string>
	<string name="slow">Slow</string>
	<string name="fast">Fast</string>
	<string name="bestScore">Best score: 24</string>
	<string name="labelNumberOfFruits">Score: 5</string>
	<string name="numberOfLivesLabel">Number of lives</string>
	<string-array name="numberOfLives">
		<item >1</item>
		<item >2</item>
		<item >3</item>
		<item >4</item>
		<item >5</item>
	</string-array>
	<string name="loseGame">You lose the game !</string>
	<string name="loseGameTitle">Lose</string>
	<string name="ok">ok</string>
	<string-array name="arrayFruitsSize">
		<item >Normal</item>
		<item >Big</item>
		<item >Huge</item>
	</string-array>
	<string name="pause">Pause</string>
</resources>
