<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/numberOfFruts"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/sFruitNumber"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="6"
            android:text="@string/FruitSpeed"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/sFruitSpeed"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="7" />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView5"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="12"
            android:text="@string/fruitSize"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="8"
            android:text="@string/fast"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView6"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="8"
            android:text="@string/slow"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView7"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="15"
            android:text="@string/numberOfLivesLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="16"
            android:entries="@array/numberOfLives" />

        <Spinner
            android:id="@+id/fruitSize"
            android:layout_width="fill_parent"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="14"
            android:entries="@array/arrayFruitsSize" />

    </GridLayout>

</FrameLayout>